# stock_direct

./: .gitignore  README.md  config.ps1  pyproject.toml
notebooks/: explore-0.0.1.ipynb  utils.py
stock_direct/: __init__.py  utils.py
