[tool.black]
line_length = 88
skip_string_normalization = false

[tool.flake8]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_direct_module"
version = "1.0.0"
dependencies = [
    "pandas",
    "mypy",
    "black",
    "flake8",
    "isort",
    "matplotlib",
    "seaborn",
    "numpy",
    "scikit-learn",
    "statsmodels",
    "python-dotenv",
    "lightgbm",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]